--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,35 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 13px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn--default {
+  background: white;
+  color: #6e6e6e;
+  border: 1px solid #ddd;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.btn--text {
+  background: transparent;
+  color: black;
+  transition: none;
 }
 
-.card {
-  padding: 2em;
+.btn--active {
+  background: black !important;
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+.btn--text:hover {
+  background: #f2f2f2;
+  border-color: #f2f2f2;
+}
+
+.btn--highlighted {
+  background: #f2f2f2;
 }
