--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --font-size-default: 14px;
+  --font-size-small: 12px;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -17,4 +22,9 @@
   height: 40px;
   align-items: center;
   text-align: center;
+  font-size: var(--font-size-default);
+}
+
+.grid__week--small {
+  font-size: var(--font-size-small);
 }
