--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -9,7 +9,12 @@
   align-items: center;
   height: var(--button-height-default);
   font-size: var(--font-size-default);
+  font-weight: 500;
+  font-family: inherit;
   padding: 0 12px;
+  border-radius: 8px;
+  border-style: none;
+  cursor: pointer;
 }
 
 .btn--small {
@@ -53,4 +58,9 @@
 
 .btn--highlighted {
   background-color: #f2f2f2;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
